--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.10)
 project(dining_philosophers LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(dining_philosophers
+add_executable(philosophers
     src/main.cpp
+    src/table.cpp
+    src/philosopher.cpp
 )
 
-target_include_directories(dining_philosophers PRIVATE src)
+target_include_directories(philosophers PRIVATE include)
